exluidos arquivos que nao serao utilizados

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="static/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   </head>
   <body>
     <nav id="menu" class="container py-2 bg-white d-flex justify-content-between">
-      <img src="../static/img/logo.png" height="55" alt="">
+      <img src="img/logo.png" height="55" alt="">
       <div id="buttons-menu" class="d-flex py-2 justify-content-between">
         <a href="#presentes" class="nav-link">
           <i class="bxr bx-gift me-1 btn d-flex align-items-center p-2 rounded-circle" style="font-size: 1.4em;"></i>
@@ -1107,7 +1107,7 @@
               <div class="col-6 pe-1">
                 <div class="card border-0 shadow-sm py-2 px-1 col-12">
                   <span class="position-absolute top-0 start-50 translate-middle badge rounded-pill bg-info">Geral</span>
-                  <img src="../static/img/qrcode.png" class="card-img-top rounded" >
+                  <img src="img/qrcode.png" class="card-img-top rounded" >
                   <div class="card-body pb-1">
                     <h4 class="card-title lh-1 text-center">Contribuição via Pix</h4>
 
